tests/machine/x/pascal/python_math.error
line: 28
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/python_math.pas
python_math.pas(19,11) Error: Identifier not found "math"
python_math.pas(19,21) Error: Identifier not found "math"
python_math.pas(20,11) Error: Identifier not found "math"
python_math.pas(21,12) Error: Identifier not found "math"
python_math.pas(21,21) Error: Identifier not found "math"
python_math.pas(22,12) Error: Identifier not found "math"
python_math.pas(22,21) Error: Identifier not found "math"
python_math.pas(28) Fatal: There were 7 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

